refined for video sync!